--- a/login.html
+++ b/login.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="	https://www.greenpost.uz/images/logo.svg">
     <link rel="stylesheet" href="css/login.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Log in</title>
+    <title>green-post</title>
 </head>
 <body>
     <div class="login-wrap">
         <div class="login-wrap1" id="login-wrap1">
+            <a href="index.html">
             <div  class="d-flex">
                 <img src="https://www.greenpost.uz/images/logo.svg" alt="">
                 <div>
@@ -17,6 +18,7 @@
                     <span class="slogin">выгодная доставка из Китая</span>
                 </div>
             </div>
+            </a>
             <div class="signin">
                 <div class="login-sign">
                     <div onclick="vxod()" class="vxod" id="vxod">Вход</div>
@@ -47,7 +49,8 @@
             </div>
        </div> 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="login.js"></script>
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
