--- a/soveti.html
+++ b/soveti.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/logo.svg">
+    <link rel="icon" href="	https://www.greenpost.uz/images/logo.svg">
     <link rel="stylesheet" href="css/soveti.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Советы по почтовому оформлению</title>
@@ -66,7 +66,7 @@
             </div>
             <div class="instruksiya">
                 <a href="login.html" class="lichniy">Личный кабинет</a><br>
-                <a href="menyu pages/pravila.html" class="instruktor">Инструкция</a>
+                <a href="pravila.html" class="instruktor">Инструкция</a>
             </div>
             <div class="language">
                 <p>Выберите язык</p>
@@ -95,7 +95,7 @@
         <div class="menu">
             <div class="menu-part">
                 <div class="ins-wrap">
-                    <a href="#" class="text1 ins-text">Инструкция</a>
+                    <a href="pravila.html" class="text1 ins-text">Инструкция</a>
                     <div onclick="exitMenu()" class="exit-menu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#449be4" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
@@ -105,18 +105,18 @@
                 <div class="sd-menu">
                     <div class="m-text">Меню</div>
                     <ul class="m-ul border-bottom11"> 
-                        <li class="border-bottom11"><a href="">Как оформить доставку</a></li>
-                        <li class="border-bottom11"><a href="menyu pages/pravila.html">Правила перевозки товаров</a></li>
+                        <li class="border-bottom11"><a href="dostavka.html">Как оформить доставку</a></li>
+                        <li class="border-bottom11"><a href="pravila.html">Правила перевозки товаров</a></li>
                         <li class="border-bottom11"><a href="soveti.html">Советы по почтовому оформлению</a></li>
-                        <li class="border-bottom11"><a href="">Про шопинг в Китае</a></li>
-                        <li class="border-bottom11"><a href="menyu pages/taobao.html">Подробнее о таобао</a></li>
-                        <li><a href="menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a></li>
+                        <li class="border-bottom11"><a href="shopping.html">Про шопинг в Китае</a></li>
+                        <li class="border-bottom11"><a href="taobao.html">Подробнее о таобао</a></li>
+                        <li><a href="service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a></li>
                     </ul>
                     <div class="other-menus">
                         <div class="border-bottom11"><a href="bonus.html">Бонусная программа</a></div>
-                        <div class="border-bottom11"><a href="">Тарифы и услуги</a></div>
+                        <div class="border-bottom11"><a href="tarif.html">Тарифы и услуги</a></div>
                         <div class="border-bottom11"><a href="soveti.html">Советы по почтовому оформлению</a></div>
-                        <div><a href="">Шоппинг-сервис</a></div>
+                        <div><a href="shopping.html">Шоппинг-сервис</a></div>
                     </div>
                 </div>
                 <div class="part2 mb-3">
@@ -168,12 +168,12 @@
                 <li class="menyular" id="menyular">
                     <a class="head-menu" href="#">Меню</a>
                     <div class="menu-block" id="menu-block">
-                        <a href="#">Как оформить доставку</a>
-                        <a href="menyu pages/pravila.html">Правила перевозки товаров</a>
+                        <a href="dostavka.html">Как оформить доставку</a>
+                        <a href="pravila.html">Правила перевозки товаров</a>
                         <a href="soveti.html">Советы по почтовому оформлению</a>
-                        <a href="#">Про шопинг в Китае</a>
-                        <a href="/menyu pages/taobao.html">Подробнее о таобао</a>
-                        <a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        <a href="shopping.html">Про шопинг в Китае</a>
+                        <a href="taobao.html">Подробнее о таобао</a>
+                        <a href="service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
                     </div>
                 </li>
                 </li>
@@ -181,13 +181,13 @@
                     <a href="bonus.html">Бонусная программа</a>
                 </li>
                 <li>
-                    <a href="">Тарифы и услуги</a>
+                    <a href="tarif.html">Тарифы и услуги</a>
                 </li>
                 <li>
-                    <a href="soveti.html">Советы по почтовому оформлению</a>
+                    <a href="soveti.html" >Советы по почтовому оформлению</a>
                 </li>
                 <li>
-                    <a href="">Шоппинг-сервис</a>
+                    <a href="shopping.html">Шоппинг-сервис</a>
                 </li>
             </ul>
         </div>
@@ -487,8 +487,8 @@
                     </div>
                 </div>
                 <div class="instruksiya">
-                    <a href="" class="lichniy">Личный кабинет</a><br>
-                    <a href="" class="instruktor">Инструкция</a>
+                    <a href="login.html" class="lichniy">Личный кабинет</a><br>
+                    <a href="pravila.html" class="instruktor">Инструкция</a>
                 </div>
                 <div class="language">
                     <p id="yazik">Выберите язык</p>
@@ -520,12 +520,12 @@
                 <li class="ftMenyular" id="ftMenyular">
                     <a class="head-menu" href="#">Меню</a>
                     <div class="ftMenuBlock" id="ftMenuBlock">
-                        <a href="#">Как оформить доставку</a>
-                        <a href="menyu pages/pravila.html">Правила перевозки товаров</a>
+                        <a href="dostavka.html">Как оформить доставку</a>
+                        <a href="pravila.html">Правила перевозки товаров</a>
                         <a href="soveti.html">Советы по почтовому оформлению</a>
-                        <a href="#">Про шопинг в Китае</a>
-                        <a href="/menyu pages/taobao.html">Подробнее о таобао</a>
-                        <a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        <a href="shopping.html">Про шопинг в Китае</a>
+                        <a href="taobao.html">Подробнее о таобао</a>
+                        <a href="service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
                     </div>
                 </li>
                 </li>
@@ -533,13 +533,13 @@
                     <a href="bonus.html">Бонусная программа</a>
                 </li>
                 <li>
-                    <a href="">Тарифы и услуги</a>
+                    <a href="tarif.html">Тарифы и услуги</a>
                 </li>
                 <li>
                     <a href="soveti.html" >Советы по почтовому оформлению</a>
                 </li>
                 <li>
-                    <a href="">Шоппинг-сервис</a>
+                    <a href="shopping.html">Шоппинг-сервис</a>
                 </li>
             </ul>
         </div>
@@ -552,6 +552,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
