--- a/taobao.html
+++ b/taobao.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/logo.svg">
-    <link rel="stylesheet" href="/menyu pages/pravila.css">
+    <link rel="icon" href="	https://www.greenpost.uz/images/logo.svg">
+    <link rel="stylesheet" href="css/taobao.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Правила перевозки товаров</title>
+    <title>Подробнее о Таобао</title>
 </head>
 <body>
-
+ 
     <header class="header max_width">
         <div class="nav_head">
 
@@ -19,8 +19,7 @@
                 <div class="menu-line"></div>
             </div>
 
-
-            <a href="/index.html">
+            <a href="index.html">
             <div  class="d-flex">
                     <img src="https://www.greenpost.uz/images/logo.svg" alt="">
                     <div>
@@ -29,8 +28,8 @@
                     </div>
             </div>
             </a>
-            
-            <a href="/login.html" class="profile-menu">
+
+            <a href="login.html" class="profile-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" width="31" height="32" fill="#21bf86" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
@@ -66,8 +65,8 @@
                 </div>
             </div>
             <div class="instruksiya">
-                <a href="/login.html" class="lichniy">Личный кабинет</a><br>
-                <a href="/menyu pages/pravila.html" class="instruktor">Инструкция</a>
+                <a href="login.html" class="lichniy">Личный кабинет</a><br>
+                <a href="pravila.html" class="instruktor">Инструкция</a>
             </div>
             <div class="language">
                 <p>Выберите язык</p>
@@ -96,7 +95,7 @@
         <div class="menu">
             <div class="menu-part">
                 <div class="ins-wrap">
-                    <a href="#" class="text1 ins-text">Инструкция</a>
+                    <a href="pravila.html" class="text1 ins-text">Инструкция</a>
                     <div onclick="exitMenu()" class="exit-menu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#449be4" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
@@ -106,18 +105,18 @@
                 <div class="sd-menu">
                     <div class="m-text">Меню</div>
                     <ul class="m-ul border-bottom11"> 
-                        <li class="border-bottom11"><a href="">Как оформить доставку</a></li>
-                        <li class="border-bottom11"><a href="/menyu pages/pravila.html">Правила перевозки товаров</a></li>
-                        <li class="border-bottom11"><a href="/soveti.html">Советы по почтовому оформлению</a></li>
-                        <li class="border-bottom11"><a href="">Про шопинг в Китае</a></li>
-                        <li class="border-bottom11"><a href="/menyu pages/taobao.html">Подробнее о таобао</a></li>
-                        <li><a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a></li>
+                        <li class="border-bottom11"><a href="dostavka.html">Как оформить доставку</a></li>
+                        <li class="border-bottom11"><a href="pravila.html">Правила перевозки товаров</a></li>
+                        <li class="border-bottom11"><a href="soveti.html">Советы по почтовому оформлению</a></li>
+                        <li class="border-bottom11"><a href="shopping.html">Про шопинг в Китае</a></li>
+                        <li class="border-bottom11"><a href="taobao.html">Подробнее о таобао</a></li>
+                        <li><a href="service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a></li>
                     </ul>
                     <div class="other-menus">
-                        <div class="border-bottom11"><a href="/bonus.html">Бонусная программа</a></div>
-                        <div class="border-bottom11"><a href="">Тарифы и услуги</a></div>
-                        <div class="border-bottom11"><a href="/soveti.html">Советы по почтовому оформлению</a></div>
-                        <div><a href="">Шоппинг-сервис</a></div>
+                        <div class="border-bottom11"><a href="bonus.html">Бонусная программа</a></div>
+                        <div class="border-bottom11"><a href="tarif.html">Тарифы и услуги</a></div>
+                        <div class="border-bottom11"><a href="soveti.html">Советы по почтовому оформлению</a></div>
+                        <div><a href="shopping.html">Шоппинг-сервис</a></div>
                     </div>
                 </div>
                 <div class="part2 mb-3">
@@ -169,94 +168,65 @@
                 <li class="menyular" id="menyular">
                     <a class="head-menu" href="#">Меню</a>
                     <div class="menu-block" id="menu-block">
-                        <a href="#">Как оформить доставку</a>
-                        <a href="./pravila.html">Правила перевозки товаров</a>
-                        <a href="../soveti.html">Советы по почтовому оформлению</a>
-                        <a href="#">Про шопинг в Китае</a>
-                        <a href="./taobao.html">Подробнее о таобао</a>
-                        <a href="./service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        <a href="dostavka.html">Как оформить доставку</a>
+                        <a href="pravila.html">Правила перевозки товаров</a>
+                        <a href="soveti.html">Советы по почтовому оформлению</a>
+                        <a href="shopping.html">Про шопинг в Китае</a>
+                        <a href="taobao.html">Подробнее о таобао</a>
+                        <a href="service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
                     </div>
                 </li>
                 </li>
                 <li>
-                    <a href="/bonus.html">Бонусная программа</a>
+                    <a href="bonus.html">Бонусная программа</a>
                 </li>
                 <li>
-                    <a href="">Тарифы и услуги</a>
+                    <a href="tarif.html">Тарифы и услуги</a>
                 </li>
                 <li>
-                    <a href="/soveti.html" >Советы по почтовому оформлению</a>
+                    <a href="soveti.html" >Советы по почтовому оформлению</a>
                 </li>
                 <li>
-                    <a href="">Шоппинг-сервис</a>
+                    <a href="shopping.html">Шоппинг-сервис</a>
                 </li>
             </ul>
         </div>
     </div>
 
-    <div class="site-TR text-center">
-        <h1 class="">Правила перевозки товаров</h1>
+    <div class="site-taobao text-center">
+        <h1 class="">Подробнее о Таобао</h1>
         <hr>
-        <h3>Простые товары:</h3>
-        <hr class="w-5">
-        <p>
-            <b>Простые товары</b>
-             - товары, которые не содержат жидкостей, батарей, не являются косметикой, продуктами питания, электроникой. К этой группе можно отнести одежду, обувь, сумки, игрушки без батарей, авто, мото, вело запчасти, бытовые и кухонные приборы от сети, музыкальные инструменты без аккумуляторов.
-        </p>
-        <img src="/img/banner-1.png" alt="">
-        <h3 id="sg">
-            SENSITIVE GOODS - 
-            <span style="color:red">SG</span>
-             (Чувствительные товары - содержат батарейки, жидкости, порошки)
-        </h3>
-        <hr class="w-5">
-        <p>
-            <b>Sensitive goods <span style="color:red">(SG)</span></b>
-             - специфические товары, требующие особой маркировки, упаковки и условий перевозки, в связи с возможностью их возгорания, протекания и иного воздействия на остальные грузы. К ним можно отнести электронику (с встроенными батареями/аккумуляторами), прочие товары, содержащие батареи и аккумуляторы, косметические средства и жидкости, продукты питания, чаи, картриджи, гель-лаки. При создании заявок/посылок с такими товарами в личном кабинете Green Post, обязательно отмечайте галочкой, что товар "содержит батареи, жидкости или порошки".
-        </p>
-        <p>
-            В обратном случае посылка может быть задержана в аэропортах на неопределенный срок либо конфискована без возможности возврата или компенсации денежных средств за нее.
-        </p>
-        <p>
-            <span>Обратите внимание!</span>
-             Косметика/средства гигиены обычно содержат жидкости или порошки в том или ином виде, и относятся к категории Sensitive goods.
-        </p>
-        <img src="/img/banner-2.png" alt="">
-        <h3>КАТЕГОРИЯ ТОВАРОВ ЗАПРЕЩЕННАЯ К ПЕРЕВОЗКЕ</h3>
-        <hr class="w-5">
-        <p>
-            <b>К данной группе товаров относятся «чистые» батареи и аккумуляторы (которые не идут в комплекте с каким-либо электронным устройством), пауербанки, прочие накопительные электрические элементы.</b>
-        </p>
-        <img src="/img/banner-3.png" alt="">
-        <p>
-            Жидкости огнеопасные, взрывоопасные, горючие, ароматизаторы эл. сигарет, радиоактивные вещества;
-        </p>
-        <p>Газовые зажигалки и прочие товары с газом, электрические зажигалки;</p>
-        <p>Лекарства и фармакологические препараты;</p>
-        <p>Прочие порошки и сыпучие вещества;</p>
-        <p>Огнестрельное оружие и боеприпасы к нему, холодное оружие и другие предметы, специально предназначенные для нападения и обороны (кастеты, стилеты, баллончики с жидкостью паралитического действия и т.п.);</p>
-        <p>Комплектующие и аксессуары для оружия (прицелы, приклады, магазины и т.д.);</p>
-        <p>Наркотические и психотропные вещества, их аналоги и прекурсоры, подлежащие специальному контролю в соответствии с законодательством;</p>
-        <p>Взрывчатые, легковоспламеняющиеся и другие опасные вещества, военное снаряжение;</p>
-        <p>Человеческие останки и органы, живые животные;</p>
-        <p>Антиквариат и предметы, представляющие национальное, историческое или культурное достояние народа, что определяется в соответствии с законами того или иного государства;</p>
-        <p>Товары, экспорт/импорт которых совершается с нарушением прав интеллектуальной собственности;</p>
-        <p>Семена и посадочный материал, пищевые продукты животного происхождения без термической обработки;</p>
-        <p>Продукты питания, которые быстро портятся (свежие фрукты, продукты животного происхождения);</p>
-        <p>Продукты питания не в оригинальной упаковке;</p>
-        <p>Продукты питания больше 10 кг в оригинальной упаковке;</p>
-        <p>Ювелирные изделия, ценные банковские бумаги и металлы;</p>
-        <p>Деньги и денежные документы в любой форме: платежные поручения, чеки, ваучеры, ценные бумаги, облигации, купоны, акции, кредитные карты и другие документы;</p>
-        <p>Предметы, запрещенные к перевозке Всемирной ассоциацией транспорта;</p>
-        <p>Предметы, которые по своему характеру или упаковке могут представлять опасность для сотрудников склада и перевозчика или населения, пачкать или портить другие отправления, оборудование или собственность третьей стороны.</p>
-        <img src="/img/banner-4.png" alt="">
+        <div class="container">
 
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 bg"></div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <p>
+                        Таобао – это крупнейшая китайская торговая площадка в режиме онлайн. На ресурсе представлено огромное количеств магазинов, как розничных, так и оптовых. Купить на Таобао можно что угодно: от аксессуаров до бытовой техники. Цены так же могут быть самыми разными, от копеечных до весьма внушительных, но в среднем стоимость товара на Таобао в несколько раз меньше стоимости аналогичного товара на территории СНГ. Доставка из Китая, а так же услуги посредника повышают стоимость, но при совершении серьезного крупного заказа выгода налицо.<br><br>
+                        Но будьте внимательны, на ТаоБао продают и секонд-хэнд. Продажа возможна по фиксированной, договорной цене, через аукцион.
+                    </p>
+                </div>
+            </div>
+            <p>
+                TMall – более надежная торговая площадка от Alibaba Group. Отличается она прежде всего, высоким качеством товаров, а попасть на эту площадку могут только проверенные продавцы, которые предоставляют определенный пакет документов, подтверждающие достоверность и реальный факт существования организации, компании – производителя или бренда. Тут вы не найдете б/у товары. Если вы покупаете товар на T-mall, его вам продает авторизированный ресселлер. Это оптимальный вариант, ведь вы можете рассчитывать на высокое качество товара и соблюдение гарантий магазином-продавцом согласно политики ТаоБао
+            </p>
+            <br>
+            <p>
+                1688 – оптовый маркетплейс, где работает понятие минимального заказа либо по количеству купленных единиц одного товара, либо по сумме заказа у одного продавца. Есть и исключения, когда продавец готов выполнить розничный заказ на 1 шт товара, однако цена на него будет выше, чем для опта. Оплата на 1688 возможна только с наличием счета в банке Китая.
+            </p>
+            <br>
+            <p>
+                Оформляйте покупки на ТаоВао и TMall самостоятельно при помощи нашей <a href="">инструкции</a>, либо воспользуйтесь сервисом <a href="">Xazina.shop</a> для выкупа товаров с ТаоВао, TMall и 1688.
+            </p>
+            <a class="gp-btn" href="">НАЧАТЬ ШОППИНГ</a>
+
+        </div>
     </div>
 
     <footer class="footer">
         <div class="header max_width">
             <div class="nav_head">
-                <a href="/index.html">
+                <a href="index.html">
                 <div class="d-flex">
                         <img src="https://www.greenpost.uz/images/logo.svg" alt="">
                         <div>
@@ -319,7 +289,7 @@
                 </div>
             </div>
         </div>            
-    </footer>   
+    </footer> 
 
     <div class="containerr f_container">
         <div>
@@ -327,12 +297,12 @@
                 <li class="ftMenyular" id="ftMenyular">
                     <a class="head-menu" href="#">Меню</a>
                     <div class="ftMenuBlock" id="ftMenuBlock">
-                        <a href="#">Как оформить доставку</a>
-                        <a href="menyu pages/pravila.html">Правила перевозки товаров</a>
+                        <a href="dostavka.html">Как оформить доставку</a>
+                        <a href="pravila.html">Правила перевозки товаров</a>
                         <a href="soveti.html">Советы по почтовому оформлению</a>
-                        <a href="#">Про шопинг в Китае</a>
-                        <a href="/menyu pages/taobao.html">Подробнее о таобао</a>
-                        <a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        <a href="shopping.html">Про шопинг в Китае</a>
+                        <a href="taobao.html">Подробнее о таобао</a>
+                        <a href="service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
                     </div>
                 </li>
                 </li>
@@ -340,13 +310,13 @@
                     <a href="bonus.html">Бонусная программа</a>
                 </li>
                 <li>
-                    <a href="">Тарифы и услуги</a>
+                    <a href="tarif.html">Тарифы и услуги</a>
                 </li>
                 <li>
                     <a href="soveti.html" >Советы по почтовому оформлению</a>
                 </li>
                 <li>
-                    <a href="">Шоппинг-сервис</a>
+                    <a href="shopping.html">Шоппинг-сервис</a>
                 </li>
             </ul>
         </div>
@@ -358,8 +328,8 @@
           </svg>
     </div>
 
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
